--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       # install
       - run: pip3 install .
       # There is no actual test
-      - run: cd test/ && MPLBACKEND=Agg pytest --cov stressberry
-      # submit to codecov
-      - run: apt-get install -y curl
-      - run: bash <(curl -s https://codecov.io/bash)
+      - run: cd test/ && MPLBACKEND=Agg pytest
+        # # submit to codecov
+      - # # run: apt-get install -y curl
+      - # # run: bash <(curl -s https://codecov.io/bash)
