--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,6 @@ jobs:
       - run: pip3 install .
       # There is no actual test
       - run: cd test/ && MPLBACKEND=Agg pytest
-        # # submit to codecov
-      - # # run: apt-get install -y curl
-      - # # run: bash <(curl -s https://codecov.io/bash)
+      # submit to codecov
+      # - run: apt-get install -y curl
+      # - run: bash <(curl -s https://codecov.io/bash)
