--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 
 jobs:
   build:
-    working_directory: ~/stressberry
+    working_directory: ~/work
     docker:
       - image: ubuntu:18.04
     steps:
@@ -16,7 +16,7 @@ jobs:
       # install
       - run: pip3 install .
       # There is no actual test
-      - run: cd test/ && MPLBACKEND=Agg pytest
+      - run: cd test/ && MPLBACKEND=Agg pytest --maxfail=1 --cov stressberry
       # submit to codecov
-      # - run: apt-get install -y curl
-      # - run: bash <(curl -s https://codecov.io/bash)
+      - run: apt-get install -y curl
+      - run: bash <(curl -s https://codecov.io/bash)
