--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,16 @@
 version: 2
 
 jobs:
+  lint:
+    docker:
+      - image: ubuntu:18.04
+    steps:
+      - checkout
+      - run: apt update
+      - run: apt install -y python3-pip
+      - run: pip3 install -U black flake8
+      - run: LC_ALL=C.UTF-8 black --check .
+      - run: flake8 setup.py pyfoobar/ test/*.py
   build:
     working_directory: ~/work
     docker:
@@ -8,11 +18,8 @@ jobs:
     steps:
       - run: apt update
       - run: apt install -y python3-pip stress
-      - run: pip3 install -U pytest pytest-cov black flake8
+      - run: pip3 install -U pytest pytest-cov
       - checkout
-      # format and lint
-      - run: LC_ALL=C.UTF-8 black --check setup.py stressberry/ test/*.py
-      - run: flake8 setup.py stressberry/ test/*.py
       # install
       - run: pip3 install .
       # There is no actual test
@@ -20,3 +27,10 @@ jobs:
       # submit to codecov
       - run: apt-get install -y curl
       - run: bash <(curl -s https://codecov.io/bash)
+
+workflows:
+  version: 2
+  lint_and_build:
+    jobs:
+      - lint
+      - build
