--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - run: apt update
-      - run: apt install -y python3-pip
+      - run: sudo apt install -y python3-pip
       - run: pip3 install -U black flake8
       - run: LC_ALL=C.UTF-8 black --check .
       - run: flake8 .
@@ -16,8 +16,8 @@ jobs:
     docker:
       - image: circleci/python:3
     steps:
-      - run: apt update
-      - run: apt install -y python3-pip stress
+      - run: sudo apt update
+      - run: sudo apt install -y python3-pip stress
       - run: pip3 install -U pytest pytest-cov
       - checkout
       # install
@@ -25,7 +25,7 @@ jobs:
       # There is no actual test
       - run: cd test/ && MPLBACKEND=Agg pytest --maxfail=1 --cov stressberry
       # submit to codecov
-      - run: apt-get install -y curl
+      - run: sudo apt install -y curl
       - run: bash <(curl -s https://codecov.io/bash)
 
 workflows:
