--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = stressberry
 version = 0.3.1
 author = Nico Schlömer
-email = nico.schloemer@gmail.com
+author_email = nico.schloemer@gmail.com
 description = Stress tests for the Raspberry Pi
 url = https://github.com/nschloe/stressberry
 project_urls =
@@ -10,8 +10,7 @@ project_urls =
     Issues=https://github.com/nschloe/stressberry/issues
 long_description = file: README.md
 long_description_content_type = text/markdown
-license = GPLv3
-platforms = any
+license = GPL-3.0-or-later
 classifiers =
     Development Status :: 4 - Beta
     License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
@@ -21,6 +20,7 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Topic :: Utilities
 
 [options]
@@ -28,13 +28,10 @@ packages = find:
 # importlib_metadata can be removed when we support Python 3.8+ only
 install_requires =
     dufte
-    importlib_metadata
+    importlib_metadata;python_version<"3.8"
     matplotlib
     pyyaml
 python_requires = >=3.6
-setup_requires =
-    setuptools>=42
-    wheel
 
 [options.entry_points]
 console_scripts =
