--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-python@v1
+    - uses: actions/setup-python@v2
       with:
         python-version: "3.x"
     - uses: actions/checkout@v2
@@ -23,20 +23,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
-    - uses: actions/setup-python@v1
+    - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
     - uses: actions/checkout@v2
-    - name: Install dependencies
+    - name: Install system dependencies
       run: sudo apt-get install -y stress
-    - name: Install package
-      run: pip install .
-    - name: Test with pytest
+    - name: Test with tox
       run: |
-        pip install pytest pytest-cov
-        cd test/ && MPLBACKEND=Agg pytest --cov stressberry
-    - name: Submit to codecov
+        pip install tox
+        tox
+    - uses: codecov/codecov-action@v1
       if: ${{ matrix.python-version == '3.8' }}
-      run: bash <(curl -s https://codecov.io/bash)
