--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ url = https://github.com/nschloe/stressberry
 project_urls =
     Code=https://github.com/nschloe/stressberry
     Issues=https://github.com/nschloe/stressberry/issues
+    Funding=https://github.com/sponsors/nschloe
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = GPL-3.0-or-later
